--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
 		"start": "gulp",
 		"build": "gulp sass"
 	},
-	"keywords": ["template", "resume", "cv"],
+	"keywords": [
+		"template",
+		"resume",
+		"cv"
+	],
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/VJAI/about.me.git"
@@ -19,9 +23,9 @@
 	},
 	"homepage": "https://github.com/VJAI/about.me#readme",
 	"devDependencies": {
-		"gulp": "^3.9.1",
+		"gulp": "^4.0.2",
 		"gulp-concat": "^2.6.1",
-		"gulp-sass": "^4.0.2",
+		"gulp-sass": "^4.1.0",
 		"gulp-webserver": "^0.9.1"
 	}
 }
